--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<h1 class="titulo-principal">Cinema</h1>
 		</header>
-		<img id="banner" src="banner.jpg">
+		<img id="banner" src="GettyImages-1355176914.webp">
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre o Cinema</h2>
 	 
@@ -31,7 +31,7 @@
 				<li class="itens">Filmes</li>
 			</ul>
 
-			<img src="beneficios.jpg" class="imagembeneficios">
+			<img src="imagembeneficios.webp" class="imagembeneficios">
 		</div>
 	</body>
 </html>
