--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre o Cinema</h2>
 	 
-			<p>Localizada em Joinville, Santa Catarina a <strong>Cinema</strong>  Traz uma distração para a sociedade. Fundada em 2019, o Cinema já é destaque na cidade e conquista novos clientes a cada dia.</p>
+			<p>Localizada em Joinville, Santa Catarina. O <strong>Cinema</strong>  Traz uma distração para a sociedade. Fundada em 2019, o Cinema já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar diversão e ter uma boa experiência"/<strong>.</em></p>
+			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar diversão e ter uma boa experiência"<strong>.</em></p>
 
 			<p>Oferecemos um bom espaço, um bom atendimento aos clientes, óculos 3D de alta qualidade. O atendimento possui padrão de excelência, garantindo qualidade e satisfação dos nossos clientes.</p>
 		</div>
