--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<li class="itens">Filmes</li>
 			</ul>
 
-			<img src="imagembeneficios.webp" class="imagembeneficios">
+			<img src="1000_F_306058200_pGs4kRFIvhoiwOTR9abKktEbzlAJ2bJi.jpg" class="1000_F_306058200_pGs4kRFIvhoiwOTR9abKktEbzlAJ2bJi.jpg">
 		</div>
 	</body>
 </html>
