--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 	<body>
 		<header>
-			<h1 class="titulo-principal">Cinema</h1>
+			<h1 class="titulo-centralizado">Cinema</h1>
 		</header>
-		<img id="banner" src="GettyImages-1355176914.webp">
+		<img id="banner" src="1000_F_306058200_pGs4kRFIvhoiwOTR9abKktEbzlAJ2bJi.jpg"">
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre o Cinema</h2>
 	 
@@ -31,7 +31,7 @@
 				<li class="itens">Filmes</li>
 			</ul>
 
-			<img src="1000_F_306058200_pGs4kRFIvhoiwOTR9abKktEbzlAJ2bJi.jpg" class="1000_F_306058200_pGs4kRFIvhoiwOTR9abKktEbzlAJ2bJi.jpg">
+			<img src="240_F_139571071_PEayiQIyZfzuu2gu7ZFSxrqJd9genIH2.jpg" class="240_F_139571071_PEayiQIyZfzuu2gu7ZFSxrqJd9genIH2.jpg">
 		</div>
 	</body>
 </html>
